--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^29.1.2",
-    "jest": "^29.2.0"
+    "jest": "^29.2.0",
+    "pg-promise": "^10.12.1"
   }
 }
