--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "tsc && jest ./dist",
-    "main": "tsc && node ./dist/main.js"
+    "express": "tsc && node ./dist/infra/http/express.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/hapi": "^20.2.2",
     "@types/jest": "^29.1.2",
+    "express": "^4.18.2",
     "jest": "^29.2.0",
     "pg-promise": "^10.12.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/hapi__hapi": "^20.0.13"
   }
 }
